--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
-	<div id="terminal" onclick="select_prompt()">
-		<div id="output"></div>
-		<div id="prompt">
-			<label>𝔸::></label>
-			<div id="input" contenteditable="true" spellcheck="false" autofocus> </div>
+	<div class="output">
+		<div class="content" id="output">
 		</div>
+	</div>
+	<div class="content" id="prompt">
+		<label>𝔸::></label>
+		<div class="input" contenteditable="true" spellcheck="false" autofocus> </div>
 	</div>
 	<div id="cheatsheet"></div>
 </body>
@@ -25,12 +26,21 @@
 		src: url(./res/CommitMono-400-Regular.otf);
 	}
 
-	:root {
-		--black: #444444;
-		--white: #F8F4E9;
+	* {
+		box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		padding: 0;
+		margin: 0;
+	}
+
+	::-webkit-scrollbar {
+		display: none;
 	}
 
 	:root {
+		--black: #444444;
+		--white: #F8F4E9;
 		--fg-color: var(--black);
 		--bg-color: var(--white);
 	}
@@ -47,97 +57,81 @@
 
 	body {
 		font-family: CommitMono;
-		margin: 40px auto;
-		max-width: 70ch;
-		line-height: 1.6;
+		line-height: 1.3;
 		font-size: 18px;
 		color: var(--fg-color);
 		background-color: var(--bg-color);
-		padding: 0 10px;
-		justify-content: center;
-		align-items: center;
+		/* padding: 0 10px; */
 	}
 
-	h1,
-	h2,
-	h3 {
-		line-height: 1.2
-	}
-
-	p {
-		line-height: 1.6;
-	}
-
-	#terminal {
-		height: 100%;
-	}
-
-	* {
-		box-sizing: border-box;
+	.content {
+		max-width: 40rem;
+		margin-left: auto;
+		margin-right: auto;
 		padding: 0;
-		margin: 0;
 	}
 
-	#input {
+	.output {
+		height: 50%;
+		overflow: auto;
+		width: 100%;
+		display: flex;
+		flex-direction: column-reverse;
+	}
+
+	.input {
 		font-family: CommitMono;
+		width: 100%;
+		border: 3px dotted transparent;
+		padding-left: 0.5rem;
+		/* border-radius: 10px; */
 	}
 
-	#input:focus {
+	.input:focus {
 		outline: none;
+		border-color: var(--fg-color);
+	}
+
+	#output {
+		margin-top: auto;
+		width: 100%;
+		height: auto;
+		white-space: pre;
+	}
+
+	#output> :first-child {
+		margin-top: auto !important;
 	}
 
 	#prompt {
-		padding-top: 0.5rem;
+		padding-top: 1rem;
 		display: flex;
 		flex-direction: row;
 		align-items: flex-end;
 	}
 
 	#prompt label {
+		/* TODO: width of char */
 		padding-right: 0.5rem;
 		width: min-content;
 		font-weight: bold;
 	}
 
-	::-webkit-scrollbar {
-		display: none;
-	}
-
-	#output {
-		height: 50%;
-		width: 100%;
-		overflow-y: auto;
-		display: flex;
-		flex-flow: column;
-		margin-top: auto
-	}
-
-
-	#output> :first-child {
-		margin-top: auto !important;
-	}
-
-	#output p {
-		white-space: pre;
-		line-height: 1.5rem;
-	}
-
-	#cheatsheet {
-	}
-
+	/* #cheatsheet {} */
 </style>
 
 <script>
 
 	var title = `
- █████████    █████    █████                                   
- ███░░░░░███  ░░███    ░░███                                    
-░███    ░███  ███████   ░███████    ██████  ████████    ██████  
-░███████████ ░░░███░    ░███░░███  ███░░███░░███░░███  ░░░░░███ 
-░███░░░░░███   ░███     ░███ ░███ ░███████  ░███ ░███   ███████ 
-░███    ░███   ░███ ███ ░███ ░███ ░███░░░   ░███ ░███  ███░░███ 
-█████   █████  ░░█████  ████ █████░░██████  ████ █████░░████████
-░░░░░   ░░░░░    ░░░░░  ░░░░ ░░░░░  ░░░░░░  ░░░░ ░░░░░  ░░░░░░░░ 
+  ▄█████████▄ ╔████▄   ╔████▄
+ ╔███════╗███ ╚═╗███   ╚═╗███
+ ║███    ║███   ║███     ║███ ▄▄▄▄    ▄████████  ╔███▄ ▄▄▄▄▄    ▄███████▄
+ ║███    ║███ ╔███████   ║█████████  ╔███═══╗███ ╚═╗█████████  ╔██════╗██
+ ║███████████ ╚═╗███╝    ║███══╗███  ║██████████   ║███══╗███  ╚══██████▌
+ ║███════╗███   ║███     ║███  ║███  ║███═════╝    ║███  ║███   ██════╗██
+ ║███    ║███   ║███ ▄▄  ║███  ║███  ║███▄   ███   ║███  ║███  ╔██    ║██▄
+╔█████  ╔█████  ╚╗█████ ╔████▌╔█████ ╚╗████████   ╔████▌╔█████ ╚╗██████╗███
+╚═══╝   ╚═══╝    ╚═══╝  ╚══╝  ╚═══╝   ╚══════╝    ╚══╝  ╚═══╝   ╚════╝ ╚═╝      
 `;
 
 	var help_msg = `
@@ -155,12 +149,16 @@
 		if (get_init_theme() == "dark") {
 			document.body.classList.add("dark");
 		}
+
+		document.querySelectorAll(".content").forEach(e => {
+			e.onclick = select_prompt;
+		});
 	}
 
-	document.getElementById("input").addEventListener("keydown", function (e) {
+	document.querySelector(".input").addEventListener("keydown", function (e) {
 		if (e.key == "Enter") {
 			e.preventDefault();
-			var input = document.getElementById("input");
+			var input = document.querySelector(".input");
 			handle_command(input.innerHTML);
 			input.innerHTML = "";
 		}
@@ -199,7 +197,7 @@
 	}
 
 	function clear_screen() {
-		document.getElementById("output").innerHTML = "";
+		document.querySelector("#output").innerHTML = "";
 	}
 
 	function output(msg) {
@@ -212,7 +210,7 @@
 
 	function select_prompt() {
 		if (!is_text_selected()) {
-			document.getElementById('input').focus();
+			document.querySelector(".input").focus();
 		}
 		return false;
 	}
@@ -232,6 +230,24 @@
 			return "dark";
 		} else {
 			return "light";
+		}
+	}
+
+	function rand_col() {
+		var letters = "0123456789ABCDEF";
+		var color = "#";
+		for (var i = 0; i < 6; i++) {
+			color += letters[Math.floor(Math.random() * 16)];
+		}
+		return color;
+	}
+
+	function add_border() {
+		var elements = document.getElementsByTagName("*");
+		console.log(elements);
+		for (var i = 0; i < elements.length; i++) {
+			elements[i].style.borderColor = rand_col();
+			elements[i].style.borderStyle = "dotted";
 		}
 	}
 
