--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,23 @@
 <html>
 
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script>
+        MathJax = {
+            tex: {
+              inlineMath: [['$', '$'], ['\\(', '\\)']],
+            },
+
+            <!-- options: { -->
+            <!--   ignoreHtmlClass: '.*', -->
+            <!--   processHtmlClass: 'mathjax' -->
+            <!-- }, -->
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
 	<title>Athena-repl</title>
 </head>
 
@@ -261,6 +276,8 @@
 				athena.cntxt.append(String(cmd));
 				break;
 		}
+
+    MathJax.typeset();
 	}
 
 	function help() {
